extract github config from code to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8887
+
+github.client.id=Iv1.09d8db792bb8f4d8
+github.client.secret=57485dc614c8742523a7e50c3c8e13cb2d944675
+github.client.url=http://localhost:8887/callback
+
